# 5G00EV25-3001_server

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  logging.conf  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot_updates.yml  flake8.yml  github_release.yml  pylint.yml  pypi_deploy.yml  ruff.yml  unit_tests.yml
docs/: index.md
docs/example_code/JavaScript/: .js  get.js
docs/example_code/Rust/: api-v1-rooms-get.rs  api-v1-rooms-{room_id}-get.rs  get.rs
docs/example_code/js/: api-v1-rooms-get.js  api-v1-rooms-{room_id}-get.js
docs/example_code/ts/: api-v1-rooms-get.ts  api-v1-rooms-{room_id}-get.ts
eguivalet_server/: __main__.py  config.py  crud.py  database.py  main.py  models.py  openapi_extension.py  schemas.py  utility.py
eguivalet_server/routes/: __init__.py  other.py
eguivalet_server/routes/api/: __init__.py
eguivalet_server/routes/api/v1/: __init__.py  rooms.py  users.py
server/: config.py  crud.py  database.py  main.py  models.py  openapi_extension.py  schemas.py  utility.py
server/routes/: __init__.py  other.py
server/routes/api/: __init__.py
server/routes/api/v1/: __init__.py  db.py  management.py  room.py  rooms.py  user.py  users.py
src/eguivalet_server/: __init__.py  __main__.py  config.py  crud.py  database.py  main.py  models.py  openapi_extension.py  schemas.py
src/eguivalet_server/routes/: __init__.py  other.py
src/eguivalet_server/routes/api/: __init__.py
src/eguivalet_server/routes/api/v1/: __init__.py  rooms.py  users.py
tests/: conftest.py  test_crud.py  test_database.py  test_default.py  test_rooms.py  test_root.py  test_schemas.py  test_users.py
