[build-system]
requires = ['poetry-core>=1.2.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    '**/__main__.py',
    'tests/*',
    '**/main.py',  # No point in including code that cannot be tested anyway
    '**/openapi_extension.py',
]


[tool.mypy]
plugins = ['sqlmypy',]


[tool.poetry]
name = 'eguivalet_server'
version = '0.2.1'
description = "A server implementation for the EguiValet messaging service."

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = [
    "Juha Järvinen <juha.3.jarvinen@tuni.fi>",
    "Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",
]

include = ['CHANGELOG.md', 'LICENSE', 'logging.conf']
license = 'MIT'
readme = 'README.md'

homepage = 'https://pypi.org/project/5G00EV25-3001_server/'
repository = 'https://github.com/Diapolo10/5G00EV25-3001_server'
documentation = 'https://github.com/Diapolo10/5G00EV25-3001_server/tree/main/docs'

keywords = [
    'api',
    'communication',
    'network',
    'networking',
    'python3',
    'restful',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Framework :: FastAPI',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: SQL',
    'Topic :: Communications :: Chat',
    'Topic :: Security',
    'Typing :: Typed',
]


[tool.poetry.dependencies]
python = '^3.10.0'
aiosqlite = '^0.19.0'
# asyncpg = '^0.27.0'  # For PostgreSQL
fastapi = {version='^0.109.0', extras=['all',]}
fastapi-users = {version='^12.1.2', extras=['sqlalchemy',]}
uvicorn = '^0.27.0'
SQLAlchemy = '^2.0.25'
SQLAlchemy-Utils = '^0.38.3'
python-multipart = '^0.0.6'
requests = '^2.31.0'
tomli = '^2.0.1'


[tool.poetry.group.dev.dependencies]
mypy = '^1.8.0'
sqlalchemy-stubs = '^0.4.0'
types-sqlalchemy-utils = '^1.0.1'


[tool.poetry.group.linters]
optional = true


[tool.poetry.group.linters.dependencies]
ruff = '^0.1.15'


[tool.poetry.group.tests]
optional = true


[tool.poetry.group.tests.dependencies]
coverage = {version = '^7.4.1', extras = ['toml',]}
pytest = '^8.0.0'
pytest-cov = '^4.1.0'
tox = '^4.12.1'
tox-gh-actions = '^3.2.0'


[tool.poetry.urls]
"Source code" = 'https://github.com/Diapolo10/5G00EV25-3001_server'
"Tracker" = 'https://github.com/Diapolo10/5G00EV25-3001_server/issues'
"Changelog" = 'https://github.com/Diapolo10/5G00EV25-3001_server/blob/main/CHANGELOG.md'


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    'tests',
]


[tool.ruff]
select = [
    'A',   # Builtins
    'ANN', # Annotations
    'ARG', # Unused arguments
    'B',   # Bugbear
    'BLE', # Blind except
    'C4',  # Comprehensions
    'C90', # mccabe
    'COM', # Commas
    'DTZ', # Datetimes
    'ERA', # Commented-out code
    'EXE', # Executable
    'G',   # Logging format
    'I',   # Isort
    'ICN', # Import conventions
    'INP', # Disallow PEP-420 (Implicit namespace packages)
    'INT', # gettext
    'ISC', # Implicit str concat
    'N',   # PEP-8 Naming
    'NPY', # Numpy
    'PGH', # Pygrep hooks
    'PIE', # Unnecessary code
    'PL',  # Pylint
    'PT',  # Pytest
    'PTH', # Use Pathlib
    'PYI', # Stub files
    'RET', # Return
    'RUF', # Ruff
    'RSE', # Raise
    'S',   # Bandit
    'SIM', # Code simplification
    'SLF', # Private member access
    'T20', # Print
    'TCH', # Type checking
    'TID', # Tidy imports
    'UP',  # Pyupgrade
    'W',   # Warnings
    'YTT', # sys.version
]
ignore = [
    'ANN401',   # Disallow typing.Any
    'PLR0913',  # Too many arguments
]
ignore-init-module-imports = true
line-length = 120


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
'__init__.py' = ['F401','F403','F405',]
'tests/*' = ['ANN', 'ARG', 'INP001', 'PT011', 'S101', 'PLR2004',]
'*/api/v1/*' = ['B008',]


[tool.ruff.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
passenv = GITHUB_*
deps =
    coverage
    coveralls[toml]
    pytest
    pytest-cov
    wheel
commands =
    coverage run -m pytest
"""
